# Robotics1-project

./: README.md  RoboticsProject_IK_FunctionsForROS2.ipynb
InverseKinematics/: RoboticsProject_IK_Calculations.ipynb  RoboticsProject_IK_FunctionsForROS2.ipynb
ros2_ws/install/control_msgs/share/control_msgs/: local_setup.sh  package.ps1  package.sh
ros2_ws/install/gripper_minimal_service/lib/gripper_minimal_service/: gripper_minimal_client_v1  gripper_minimal_client_v2
ros2_ws/install/gripper_minimal_service/share/gripper_minimal_service/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
ros2_ws/install/gripper_minimal_subscriber/lib/gripper_minimal_subscriber/: gripper_minimal_subscriber
ros2_ws/install/gripper_minimal_subscriber/share/gripper_minimal_subscriber/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
ros2_ws/install/hans_modular_gazebo/share/hans_modular_gazebo/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
ros2_ws/install/hans_t30_description/share/hans_t30_description/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
ros2_ws/install/hrim_generic_msgs/share/hrim_generic_msgs/: package.sh  (+5 more)
ros2_ws/src/ldmk_package/: package.xml  setup.cfg  setup.py
ros2_ws/src/ldmk_package/launch/: maraik.launch.py  maraik.launch2.py
ros2_ws/src/ldmk_package/ldmk_package/: anglespublisher2.py  anglespublisher_manual.py  fingersclient.py  fingerspublisher.py  roboticsIK.py  teleop_keyboard.py
videos/: README.md
(+506 files in other folders)
