<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ldmk_package</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="user@todo.todo">user</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclpy</depend>
  <build_depend>tty</build_depend>
  <build_depend>termios</build_depend>
  <depend>sys</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>hrim_actuator_rotaryservo_msgs</build_depend>
  <build_depend>hrim_actuator_gripper_srvs</build_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
